<resources>
    <string name="app_name">PizzaRizza</string>
    <string name="tab1">Меню</string>
    <string name="tab2">Профиль</string>
    <string name="tab3">Контакты</string>
    <string name="tab4">Корзина</string>
    <string name="title_activity_one">Меню</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_two">Профиль</string>
    <string name="title_activity_three">Наши контакты</string>
    <string name="title_activity_four">Корзина</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- oldPizzaRizzaStrings -->
    <string name="tabPizza">ПИЦЦА</string>
    <string name="tabCombo">КОМБО</string>
    <string name="tabZakuski">ЗАКУСКИ</string>
    <string name="tabDeserti">ДЕСЕРТЫ</string>
    <string name="tabNapitki">НАПИТКИ</string>
    <string name="tabDrTovari">ДРУГИЕ ТОВАРЫ</string>
    <string name="action_toBuy">КОРЗИНА</string>

    <string name="box">ВЫБРАТЬ</string>
    <string name="descriptionImage">Фото</string>
    <string name="titleItem">Название товара</string>
    <string name="textItem">
        Описание товара
    </string>
    <string name="prePriceItem">от</string>
    <string name="priceItem">цена</string>
    <string name="valPriceItem">р</string>
    <string name="Tab1">ПИЦЦА</string>
    <string name="Tab2">КОМБО</string>
    <string name="Tab3">ЗАКУСКИ</string>
    <string name="Tab4">ДЕСЕРТЫ</string>
    <string name="Tab5">НАПИТКИ</string>
    <string name="Tab6">ДРУГИЕ ТОВАРЫ</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signin">Авторизоваться</string>
    <string name="exit">Выйти</string>
    <string name="valuta">р</string>
    <string name="size">Размер товара</string>
    <string name="boxDelete">УДАЛИТЬ</string>
    <string name="zakaz">Оформить заказ</string>
    <string name="buy">к оплате:</string>
    <string name="quantity">шт</string>
</resources>
