<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/BasketCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/basketPrice"
                android:layout_width="wrap_content"
                android:layout_height="15dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/priceItem"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/basketName" />

            <TextView
                android:id="@+id/basketName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/titleItem"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/buttonDel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/boxDelete"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/buttonMinus"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/ic_remove_circle"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textQuantity"
                app:layout_constraintTop_toBottomOf="@+id/basketName"
                android:layout_marginRight="8dp" />

            <Button
                android:id="@+id/buttonPlus"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/ic_add_circle"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/basketPrice"
                app:layout_constraintHorizontal_bias="0.81"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/basketName" />

            <TextView
                android:id="@+id/textQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/quantity"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/buttonPlus"
                app:layout_constraintEnd_toStartOf="@+id/buttonPlus"
                app:layout_constraintTop_toTopOf="@+id/buttonPlus"
                app:layout_constraintVertical_bias="0.51"
                android:layout_marginRight="8dp" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>